--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,7 +1,11 @@
 name: Hello World
-on: [push]
+on:
+  push:
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Echo Test
-      run: echo "Hello, World!" 
+  hello-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: hello-world
+        run: echo "Hello,world!"
+    
+    
