--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,7 +5,7 @@ jobs:
   hello-job:
     runs-on: ubuntu-latest
     steps:
-      - name: hello-world
+      - name: Echo text
         run: echo "Hello,world!"
     
     
